theme/css/variables.css
/* Globals */

:root {
  --sidebar-width: 300px;
  --page-padding: 15px;
  --content-max-width: 750px;
  --menu-bar-height: 50px;
  --base03: #002b36;
  --base02: #073642;
  --base01: #586e75;
  --base00: #657b83;
  --base0: #839496;
  --base1: #93a1a1;
  --base2: #eee8d5;
  --base3: #fdf6e3;
  --yellow: #b58900;
  --cyan: #2aa198;
  --blue: #268bd2;
  --orange: #cb4b16;
}

/* Themes */

.ayu {
  --bg: hsl(210, 25%, 8%);
  --fg: #c5c5c5;

  --sidebar-bg: #14191f;
  --sidebar-fg: #c8c9db;
  --sidebar-non-existant: #5c6773;
  --sidebar-active: #ffb454;
  --sidebar-spacer: #2d334f;

  --scrollbar: var(--sidebar-fg);

  --icons: #737480;
  --icons-hover: #b7b9cc;

  --links: #0096cf;

  --inline-code-color: #ffb454;

  --theme-popup-bg: #14191f;
  --theme-popup-border: #5c6773;
  --theme-hover: #191f26;

  --quote-bg: hsl(226, 15%, 17%);
  --quote-border: hsl(226, 15%, 22%);

  --table-border-color: hsl(210, 25%, 13%);
  --table-header-bg: hsl(210, 25%, 28%);
  --table-alternate-bg: hsl(210, 25%, 11%);

  --searchbar-border-color: #848484;
  --searchbar-bg: #424242;
  --searchbar-fg: #fff;
  --searchbar-shadow-color: #d4c89f;
  --searchresults-header-fg: #666;
  --searchresults-border-color: #888;
  --searchresults-li-bg: #252932;
  --search-mark-bg: #e3b171;
}

.solarized-light {
  --bg: var(--base3);
  --fg: var(--base00);
  --title: var(--base01);

  --icons: var(--base01);
  --icons-hover: var(--cyan);

  --sidebar-bg: var(--base2);
  --sidebar-fg: var(--base01);

  --searchbar-shadow-color: var(--base1);
  --searchbar-border-color: var(--base1);
  --searchbar-bg: var(--base2);
  --searchbar-fg: var(--base01);
  --searchresults-border-color: var(--base01);
  --search-mark-bg: var(--cyan);

  --links: var(--blue);

  --inline-code-color: var(--yellow); /*var(--base1);*/

  --table-border-color: var(--base2);
  --table-header-bg: var(--base2);
  --table-alternate-bg: var(--base2);
}

.solarized-dark {
  --bg: var(--base03);
  --fg: var(--base0);
  --title: var(--base1);

  --icons: var(--base1);
  --icons-hover: var(--cyan);

  --sidebar-bg: var(--base02);
  --sidebar-fg: var(--base1);

  --searchbar-shadow-color: var(--base01);
  --searchbar-border-color: var(--base01);
  --searchbar-bg: var(--base02);
  --searchbar-fg: var(--base00);
  --searchresults-border-color: var(--base01);
  --search-mark-bg: var(--yellow);

  --links: var(--cyan);

  --inline-code-color: var(--yellow); /*var(--base00);*/

  --table-border-color: var(--base02);
  --table-header-bg: var(--base02);
  --table-alternate-bg: var(--base02);
}

.coal {
  --bg: hsl(200, 7%, 8%);
  --fg: #98a3ad;

  --sidebar-bg: #292c2f;
  --sidebar-fg: #a1adb8;
  --sidebar-non-existant: #505254;
  --sidebar-active: #3473ad;
  --sidebar-spacer: #393939;

  --scrollbar: var(--sidebar-fg);

  --icons: #43484d;
  --icons-hover: #b3c0cc;

  --links: #2b79a2;

  --inline-code-color: #c5c8c6;

  --theme-popup-bg: #141617;
  --theme-popup-border: #43484d;
  --theme-hover: #1f2124;

  --quote-bg: hsl(234, 21%, 18%);
  --quote-border: hsl(234, 21%, 23%);

  --table-border-color: hsl(200, 7%, 13%);
  --table-header-bg: hsl(200, 7%, 28%);
  --table-alternate-bg: hsl(200, 7%, 11%);

  --searchbar-border-color: #aaa;
  --searchbar-bg: #b7b7b7;
  --searchbar-fg: #000;
  --searchbar-shadow-color: #aaa;
  --searchresults-header-fg: #666;
  --searchresults-border-color: #98a3ad;
  --searchresults-li-bg: #2b2b2f;
  --search-mark-bg: #355c7d;
}

.light {
  --bg: hsl(0, 0%, 100%);
  --fg: #333333;

  --sidebar-bg: #fafafa;
  --sidebar-fg: #364149;
  --sidebar-non-existant: #aaaaaa;
  --sidebar-active: #008cff;
  --sidebar-spacer: #f4f4f4;

  --scrollbar: #cccccc;

  --icons: #cccccc;
  --icons-hover: #333333;

  --links: #4183c4;

  --inline-code-color: #6e6b5e;

  --theme-popup-bg: #fafafa;
  --theme-popup-border: #cccccc;
  --theme-hover: #e6e6e6;

  --quote-bg: hsl(197, 37%, 96%);
  --quote-border: hsl(197, 37%, 91%);

  --table-border-color: hsl(0, 0%, 95%);
  --table-header-bg: hsl(0, 0%, 80%);
  --table-alternate-bg: hsl(0, 0%, 97%);

  --searchbar-border-color: #aaa;
  --searchbar-bg: #fafafa;
  --searchbar-fg: #000;
  --searchbar-shadow-color: #aaa;
  --searchresults-header-fg: #666;
  --searchresults-border-color: #888;
  --searchresults-li-bg: #e4f2fe;
  --search-mark-bg: #a2cff5;
}

.navy {
  --bg: hsl(226, 23%, 11%);
  --fg: #bcbdd0;

  --sidebar-bg: #282d3f;
  --sidebar-fg: #c8c9db;
  --sidebar-non-existant: #505274;
  --sidebar-active: #2b79a2;
  --sidebar-spacer: #2d334f;

  --scrollbar: var(--sidebar-fg);

  --icons: #737480;
  --icons-hover: #b7b9cc;

  --links: #2b79a2;

  --inline-code-color: #c5c8c6;

  --theme-popup-bg: #161923;
  --theme-popup-border: #737480;
  --theme-hover: #282e40;

  --quote-bg: hsl(226, 15%, 17%);
  --quote-border: hsl(226, 15%, 22%);

  --table-border-color: hsl(226, 23%, 16%);
  --table-header-bg: hsl(226, 23%, 31%);
  --table-alternate-bg: hsl(226, 23%, 14%);

  --searchbar-border-color: #aaa;
  --searchbar-bg: #aeaec6;
  --searchbar-fg: #000;
  --searchbar-shadow-color: #aaa;
  --searchresults-header-fg: #5f5f71;
  --searchresults-border-color: #5c5c68;
  --searchresults-li-bg: #242430;
  --search-mark-bg: #a2cff5;
}

.rust {
  --bg: hsl(60, 9%, 87%);
  --fg: #262625;

  --sidebar-bg: #3b2e2a;
  --sidebar-fg: #c8c9db;
  --sidebar-non-existant: #505254;
  --sidebar-active: #e69f67;
  --sidebar-spacer: #45373a;

  --scrollbar: var(--sidebar-fg);

  --icons: #737480;
  --icons-hover: #262625;

  --links: #2b79a2;

  --inline-code-color: #6e6b5e;

  --theme-popup-bg: #e1e1db;
  --theme-popup-border: #b38f6b;
  --theme-hover: #99908a;

  --quote-bg: hsl(60, 5%, 75%);
  --quote-border: hsl(60, 5%, 70%);

  --table-border-color: hsl(60, 9%, 82%);
  --table-header-bg: #b3a497;
  --table-alternate-bg: hsl(60, 9%, 84%);

  --searchbar-border-color: #aaa;
  --searchbar-bg: #fafafa;
  --searchbar-fg: #000;
  --searchbar-shadow-color: #aaa;
  --searchresults-header-fg: #666;
  --searchresults-border-color: #888;
  --searchresults-li-bg: #dec2a2;
  --search-mark-bg: #e69f67;
}

@media (prefers-color-scheme: dark) {
  .light.no-js {
    --bg: hsl(200, 7%, 8%);
    --fg: #98a3ad;

    --sidebar-bg: #292c2f;
    --sidebar-fg: #a1adb8;
    --sidebar-non-existant: #505254;
    --sidebar-active: #3473ad;
    --sidebar-spacer: #393939;

    --scrollbar: var(--sidebar-fg);

    --icons: #43484d;
    --icons-hover: #b3c0cc;

    --links: #2b79a2;

    --inline-code-color: #c5c8c6;

    --theme-popup-bg: #141617;
    --theme-popup-border: #43484d;
    --theme-hover: #1f2124;

    --quote-bg: hsl(234, 21%, 18%);
    --quote-border: hsl(234, 21%, 23%);

    --table-border-color: hsl(200, 7%, 13%);
    --table-header-bg: hsl(200, 7%, 28%);
    --table-alternate-bg: hsl(200, 7%, 11%);

    --searchbar-border-color: #aaa;
    --searchbar-bg: #b7b7b7;
    --searchbar-fg: #000;
    --searchbar-shadow-color: #aaa;
    --searchresults-header-fg: #666;
    --searchresults-border-color: #98a3ad;
    --searchresults-li-bg: #2b2b2f;
    --search-mark-bg: #355c7d;
  }
}

@media screen and (max-width: 480px) {
  pre {
    font-size: 2.5vw;
    line-height: 1.3em;
  }
}


.code-border {
  border-style: solid;
  border-color: var(--table-border-color);
  width: 48%;
  overflow-x: scroll;
  text-align: left;
}

.code-border.alan {
  margin-right: 10px;
}
/**
    * Theming
  */

.language {
  padding: 0;
  height: 100%;
}

/* Tabs Start */

.ease {
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.tabs-container {
  width: 100%;
  margin: 0 auto;
}

.tabs {
  position: relative;
  margin-bottom: 50px;
}

.tabs > input,
.tabs > span {
  width: 33%;
  height: 60px;
  line-height: 60px;
  position: absolute;
  top: 0;
}

.tabs > input {
  cursor: pointer;
  filter: alpha(opacity=0);
  opacity: 0;
  position: absolute;
  z-index: 99;
}

.tabs > span {
  background: inherit;
  overflow: hidden;
}

.tabs > span i,
.tabs > span {
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;
}

.tabs > input:hover + span {
  background-color: var(--table-border-color);
}

.tabs > input:checked + span {
  background-color: var(--table-border-color);
}

#tab-1,
#tab-1 + span {
  left: 0;
}

#tab-2,
#tab-2 + span {
  left: 33%;
}

#tab-3,
#tab-3 + span {
  left: 66%;
}

.tab-content {
  padding: 80px 20px 20px;
  width: 100%;
  min-height: 340px;
}

.tab-content section {
  width: 100%;
  display: none;
}

.tab-content section h1 {
  margin-top: 15px;
  font-size: 100px;
  font-weight: 100;
}

#tab-1:checked ~ .tab-content #tab-go {
  display: flex;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: wrap;
}

#tab-2:checked ~ .tab-content #tab-java {
  display: flex;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: wrap;
}

#tab-3:checked ~ .tab-content #tab-js {
  display: flex;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: wrap;
}

.tab-indicator:nth-of-type(1) {
  background-image: url("https://logos-download.com/wp-content/uploads/2019/01/Golang_Logo.png");
  background-size: 2.5em;
  background-repeat: no-repeat;
  background-position: center;
}
.tab-indicator:nth-of-type(2) {
  background-image: url("https://upload.wikimedia.org/wikipedia/fr/thumb/2/2e/Java_Logo.svg/1200px-Java_Logo.svg.png");
  background-size: 1.5em;
  background-repeat: no-repeat;
  background-position: center;
}
.tab-indicator:nth-of-type(3) {
  background-image: url("https://firebearstudio.com/blog/wp-content/uploads/2015/10/Node-e1443953851722.png");
  background-size: 2.5em;
  background-repeat: no-repeat;
  background-position: center;
}

